--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
       <div class="jumbotron">
         <h1 class="display-6 text-center">New Your Times Search</h1>
       </div>
+  <!-- FRONT END HTML-->
+
       <div class="card mb-5">
       <div class="card-header">Header</div>
       <div class="card-body">
@@ -40,6 +42,9 @@
     <div class="card">
       <div class="card-header">Top Articles</div>
       <div class="card-body">
+
+  <!-- FRONT END HTML-->
+
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
