--- a/index.html
+++ b/index.html
@@ -19,23 +19,34 @@
   <!-- FRONT END HTML-->
 
       <div class="card mb-5">
-      <div class="card-header">Header</div>
+      <div class="card-header">Search Parameters</div>
       <div class="card-body">
         <form>
           <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+            <label for="exampleInputEmail1">Search Term:</label>
+            <input type="text" class="form-control" id="searchTerm" aria-describedby="emailHelp">
           </div>
           <div class="form-group">
-            <label for="exampleInputPassword1">Password</label>
-            <input type="password" class="form-control" id="exampleInputPassword1">
+            <label for="numberOfRecords">Number of Records to Retrieve</label>
+            <select class="form-control" id="formSelector">
+              <option>1</option>
+              <option>2</option>
+              <option>3</option>
+              <option>4</option>
+              <option>5</option>
+            </select>
+            <!-- <input type="password" class="form-control" id="exampleInputPassword1"> -->
           </div>
-          <div class="form-group form-check">
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <label class="form-check-label" for="exampleCheck1">Check me out</label>
+          <div class="form-group">
+            <label for="exampleInputEmail1">Start Year (Optional):</label>
+            <input type="text" class="form-control" id="startYear" aria-describedby="emailHelp">
           </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
+          <div class="form-group">
+            <label for="exampleInputEmail1">End Year (Optional):</label>
+            <input type="text" class="form-control" id="endYear" aria-describedby="emailHelp">
+          </div>
+          <button type="text" class="btn btn-primary" id="searchArticleBTN">Search</button>
+          <button type="text" class="btn btn-primary" id="clearResultsBTN">Clear</button>
         </form>
       </div>
     </div>
